force-app/main/default/objects/Candidate__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agile</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Batch Apex</fullName>
            </value>
            <value>
                <fullName>CI/CD</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>Data Analysis</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Docker</fullName>
            </value>
            <value>
                <fullName>Git</fullName>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>Kubernetes</fullName>
            </value>
            <value>
                <fullName>Lightning Design System</fullName>
            </value>
            <value>
                <fullName>Lightning Web Components</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Platform Events</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Queueable Apex</fullName>
            </value>
            <value>
                <fullName>REST API</fullName>
            </value>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
            <value>
                <fullName>Salesforce Flow</fullName>
            </value>
            <value>
                <fullName>Salesforce Integration</fullName>
            </value>
            <value>
                <fullName>Scrum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>