force-app/main/default/objects/Candidate__c/fields/User_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Unique_Id__c</fullName>
    <label>User Unique Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>